#1687 use BasicAuth for Grid in tests - just to ensure that downloading still works